OWL-5691/OWL-5693: * validate action corresponds to type on save * java sort on title, then id * remove active admin types property